# SB

./: .gitignore  CMakeLists.txt  README.txt
CPUSim/CPUSim4.0.9/: Cpusim4.bat
Project/: README.txt~  a.out  entrada.txt  entrada.txt~  instruçõesUsadasNosTestes.txt  main  main (.data na pilha).cpp  main (copy).cpp  main (lucas).cpp  main (lucas).cpp~  main (rafael).cpp  main.cpp  main.cpp~  main2.cpp  rafael.txt  saida.  saida.mif  saida.txt  saida1.mif  saida2.mif  teste  teste.a~  teste.mif  teste.mif~  teste0.mif~  teste1.a~  teste1.mif  teste1.mif~  teste2.a~  teste2.mif  teste2.mif~  teste3.a~  teste3.mif  teste4.mif  teste5.mif
Project/SB/: SB.cbp  SB.depend
Project/assembler/: main.cpp  maps.cpp
Project/doc/: README.txt  README.txt~
Rafael/: Linker.cpp  Module.hpp  main.cpp
Rafael/Montador/: Module.cpp  Module.cpp~  Module.hpp  Module.hpp~  a.out  erro.txt
Rafael/Teste/: erros.txt  main.cpp
Rafael/backup/: Linker.hpp  Module.cpp  makefile  saida.txt
TP1/: ..makefile  README.txt
TP1/Project/: a.out  erro.txt  main.cpp  saida2.mif  saida4.mif  saida5.mif  teste0.mif  teste1.mif
TP1/Rafael/: a.out  saida.mif
TP2/: Linker.cpp  Linker.hpp  Module.cpp  Module.hpp  a.out  erros.txt  main.cpp
TP2/Linkador/: Linker.cpp  Linker.hpp  Linker.hpp~  ObjectModule.cpp  ObjectModule.hpp  erro.txt  erros.txt  linkador  main.cpp  makefile
TP2/Montador/: Module.cpp  Module.cpp~  Module.hpp  a.out  entrada.mif  (+8 more)
TP3/: a.out  lcd.c  main.c  makefile  pair.c  pair.h  pair.h.gch  queue.c  queue.h  queue.h.gch  rtc.h  rtc_r.c  snake.c  snake.h  snake.h.gch
(+55 files in other folders)
